<resources>
    <string name="app_name">PetIt</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pets">Mascotas</string>
    <string name="menu_paseos">Paseos</string>
    <string name="menu_slideshow">Slideshow</string>
    TODO: Remove or change this placeholder text
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre de la mascota</string>
    <string name="msg_edad">Edad de la mascota</string>
    <string name="msg_hInicio">Hora Inicio</string>
    <string name="msg_hFinal">Hora Final</string>
    <string name="msg_raza">Raza de la mascota</string>
    <string name="msg_total">TOTAL</string>
    <string name="bt_agregar">Agregar mascota</string>
    <string name="bt_actualizar">Actualizar mascota</string>

    <string name="msg_agregar">Mascota Agregada</string>
    <string name="msg_actualizar">Mascota Actualizada</string>
    <string name="menu_delete">eliminarMascota</string>
    <string name="si">si</string>
    <string name="msg_segruro_brorrar">¿Esta seguro de borrar?</string>
    <string name="no">no</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver mascota en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="msg_datos">Faltan datos</string>
    <string name="msg_firebase_add">Documento Agregado</string>
    <string name="msg_firebase_no_add">Documento no Agregado</string>
    <string name="msg_firebase_no_update">Documento no Actualizado</string>
    <string name="msg_firebase_update">Documento Actualizado</string>
    <string name="msg_firebase_no_delete">Documento no Eliminado</string>
    <string name="msg_firebase_delete">Documento Eliminado</string>
    <string name="error">Error</string>
    <string name="msg_actualizarP">Paseo Actualizado</string>
    <string name="msg_agregarP">Paseo Agregado</string>
    <string name="register">Registrarse</string>
    <string name="Login">Iniciar Sesión</string>


</resources>