<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.UpdatePaseoFragment" >

    <EditText
        android:id="@+id/etNombre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName"
        tools:text="@string/msg_nombre" />

    <LinearLayout
        android:id="@+id/horarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHInicial"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombre"
            android:inputType="textPersonName"
            tools:text="@string/msg_hInicio" />

        <EditText
            android:id="@+id/etHFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombre"
            android:inputType="textPersonName"
            tools:text="@string/msg_hFinal" />
    </LinearLayout>

    <EditText
        android:id="@+id/etTotal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/msg_total"
        android:inputType="number" />

    <Button
        android:id="@+id/btActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_actualizar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/msg_phone_call"
            android:src="@drawable/ic_phone" />

        <ImageButton
            android:id="@+id/bt_whatsapp"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_weight="1"
            android:contentDescription="@string/msg_whatsapp_send"
            android:scaleType="fitCenter"
            android:src="@drawable/whatsapp_logo"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/bt_location"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_weight="1"
            android:contentDescription="@string/msg_web_view"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_location" />
    </LinearLayout>

</LinearLayout>